compiler/parser.output
   0  $accept : %entry% $end

   1  program : imports stmts EOF

   2  imports :
   3          | import imports

   4  import : IMPORT STRING

   5  fxn : FUN ID LPAREN ids RPAREN LBRACE stmts RBRACE
   6      | FUN ID LPAREN RPAREN LBRACE stmts RBRACE

   7  typ : TYPE ID ASSIGN LBRACE stmts RBRACE sub_typs
   8      | TYPE ID ASSIGN sub_typs

   9  sub_typs : sub_typ
  10           | sub_typ VERT sub_typs

  11  sub_typ : ID
  12          | ID OF exprs
  13          | ID LBRACE stmts RBRACE
  14          | ID OF exprs LBRACE stmts RBRACE

  15  stmts :
  16        | stmt stmts

  17  stmt : expr SEMI
  18       | LBRACE stmts RBRACE
  19       | typ
  20       | fxn
  21       | INLINE LBRACK cpp_strings RBRACK
  22       | PRINT expr SEMI
  23       | RETURN expr SEMI
  24       | RAISE expr SEMI
  25       | BREAK SEMI
  26       | WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
  27       | FOR LPAREN expr SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE
  28       | FOR LPAREN expr IN expr RPAREN LBRACE stmts RBRACE
  29       | MATCH LPAREN expr RPAREN LBRACE match_conditions RBRACE
  30       | TRY LBRACE stmts RBRACE CATCH expr LBRACE stmts RBRACE
  31       | IF LPAREN expr RPAREN LBRACE stmts RBRACE
  32       | IF LPAREN expr RPAREN LBRACE stmts RBRACE else_stmt
  33       | SEMI

  34  match_conditions : match_condition LBRACE stmts RBRACE
  35                   | match_condition LBRACE stmts RBRACE VERT match_conditions

  36  match_condition : expr
  37                  | expr LPAREN id RPAREN
  38                  | expr LPAREN ids RPAREN
  39                  | expr LPAREN ids RPAREN WHEN expr
  40                  | expr LPAREN id RPAREN WHEN expr
  41                  | expr WHEN expr

  42  else_stmt : ELIF LPAREN expr RPAREN LBRACE stmts RBRACE
  43            | ELIF LPAREN expr RPAREN LBRACE stmts RBRACE else_stmt
  44            | ELSE LBRACE stmts RBRACE

  45  exprs : expr
  46        | expr COMMA exprs

  47  expr : DECREMENT expr
  48       | INCREMENT expr
  49       | NEGATE expr
  50       | MINUS expr
  51       | TRY expr COLON expr
  52       | expr PLUS expr
  53       | expr MINUS expr
  54       | expr TIMES expr
  55       | expr DIVIDE expr
  56       | expr MOD expr
  57       | expr AND expr
  58       | expr OR expr
  59       | expr LT expr
  60       | expr GT expr
  61       | expr LEQ expr
  62       | expr GEQ expr
  63       | expr EQ expr
  64       | expr NEQ expr
  65       | expr IS expr
  66       | expr QUEST expr COLON expr
  67       | expr ASSIGN expr
  68       | expr PLUSASSIGN expr
  69       | expr MINUSASSIGN expr
  70       | expr TIMESASSIGN expr
  71       | expr DIVIDEASSIGN expr
  72       | expr MODASSIGN expr
  73       | expr FORCEASSIGN expr
  74       | LPAREN exprs RPAREN ASSIGN LPAREN exprs RPAREN
  75       | LPAREN exprs RPAREN PLUSASSIGN LPAREN exprs RPAREN
  76       | LPAREN exprs RPAREN MINUSASSIGN LPAREN exprs RPAREN
  77       | LPAREN exprs RPAREN TIMESASSIGN LPAREN exprs RPAREN
  78       | LPAREN exprs RPAREN DIVIDEASSIGN LPAREN exprs RPAREN
  79       | LPAREN exprs RPAREN MODASSIGN LPAREN exprs RPAREN
  80       | LPAREN exprs RPAREN FORCEASSIGN LPAREN exprs RPAREN
  81       | id
  82       | literal
  83       | expr brack_exprs
  84       | expr paren_tuple_exprs
  85       | expr period_access_exprs
  86       | expr LPAREN RPAREN
  87       | expr LPAREN exprs RPAREN
  88       | expr INCREMENT
  89       | expr DECREMENT

  90  id : ID
  91     | ID QUEST
  92     | ID FORCE
  93     | UNDER
  94     | LPAREN ids RPAREN

  95  ids : id COMMA id
  96      | id COMMA ids

  97  brack_exprs : LBRACK expr RBRACK
  98              | LBRACK expr RBRACK brack_exprs

  99  paren_tuple_exprs : PERIOD LPAREN INT RPAREN
 100                    | PERIOD LPAREN INT RPAREN paren_tuple_exprs

 101  period_access_exprs : PERIOD expr
 102                      | PERIOD expr PERIOD period_access_exprs

 103  literal : INT
 104          | DOUBLE
 105          | CHAR
 106          | BOOL
 107          | STRING
 108          | LBRACE RBRACE
 109          | LBRACE exprs RBRACE
 110          | LBRACE key_val_exprs RBRACE
 111          | LPAREN exprs RPAREN

 112  key_val_exprs : INT COLON expr
 113                | STRING COLON expr
 114                | INT COLON expr COMMA key_val_exprs
 115                | STRING COLON expr COMMA key_val_exprs

 116  cpp_strings :
 117              | CPP_STRING cpp_strings

 118  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (118)
	imports : .  (2)

	IMPORT  shift 3
	LPAREN  reduce 2
	LBRACE  reduce 2
	MINUS  reduce 2
	INCREMENT  reduce 2
	DECREMENT  reduce 2
	NEGATE  reduce 2
	FUN  reduce 2
	TYPE  reduce 2
	PRINT  reduce 2
	RAISE  reduce 2
	BREAK  reduce 2
	RETURN  reduce 2
	TRY  reduce 2
	INLINE  reduce 2
	IF  reduce 2
	FOR  reduce 2
	WHILE  reduce 2
	MATCH  reduce 2
	SEMI  reduce 2
	UNDER  reduce 2
	EOF  reduce 2
	STRING  reduce 2
	INT  reduce 2
	DOUBLE  reduce 2
	CHAR  reduce 2
	BOOL  reduce 2
	ID  reduce 2

	program  goto 4
	imports  goto 5
	import  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	import : IMPORT . STRING  (4)

	STRING  shift 7
	.  error


state 4
	%entry% : '\001' program .  (118)

	.  reduce 118


state 5
	program : imports . stmts EOF  (1)
	stmts : .  (15)

	LPAREN  shift 8
	LBRACE  shift 9
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	FUN  shift 14
	TYPE  shift 15
	PRINT  shift 16
	RAISE  shift 17
	BREAK  shift 18
	RETURN  shift 19
	TRY  shift 20
	INLINE  shift 21
	IF  shift 22
	FOR  shift 23
	WHILE  shift 24
	MATCH  shift 25
	SEMI  shift 26
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	EOF  reduce 15

	stmts  goto 34
	fxn  goto 35
	typ  goto 36
	stmt  goto 37
	expr  goto 38
	id  goto 39
	literal  goto 40


state 6
	imports : import . imports  (3)
	imports : .  (2)

	IMPORT  shift 3
	LPAREN  reduce 2
	LBRACE  reduce 2
	MINUS  reduce 2
	INCREMENT  reduce 2
	DECREMENT  reduce 2
	NEGATE  reduce 2
	FUN  reduce 2
	TYPE  reduce 2
	PRINT  reduce 2
	RAISE  reduce 2
	BREAK  reduce 2
	RETURN  reduce 2
	TRY  reduce 2
	INLINE  reduce 2
	IF  reduce 2
	FOR  reduce 2
	WHILE  reduce 2
	MATCH  reduce 2
	SEMI  reduce 2
	UNDER  reduce 2
	EOF  reduce 2
	STRING  reduce 2
	INT  reduce 2
	DOUBLE  reduce 2
	CHAR  reduce 2
	BOOL  reduce 2
	ID  reduce 2

	imports  goto 41
	import  goto 6


state 7
	import : IMPORT STRING .  (4)

	.  reduce 4


state 8
	expr : LPAREN . exprs RPAREN ASSIGN LPAREN exprs RPAREN  (74)
	expr : LPAREN . exprs RPAREN PLUSASSIGN LPAREN exprs RPAREN  (75)
	expr : LPAREN . exprs RPAREN MINUSASSIGN LPAREN exprs RPAREN  (76)
	expr : LPAREN . exprs RPAREN TIMESASSIGN LPAREN exprs RPAREN  (77)
	expr : LPAREN . exprs RPAREN DIVIDEASSIGN LPAREN exprs RPAREN  (78)
	expr : LPAREN . exprs RPAREN MODASSIGN LPAREN exprs RPAREN  (79)
	expr : LPAREN . exprs RPAREN FORCEASSIGN LPAREN exprs RPAREN  (80)
	id : LPAREN . ids RPAREN  (94)
	literal : LPAREN . exprs RPAREN  (111)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	ids  goto 44
	exprs  goto 45
	expr  goto 46
	id  goto 47
	literal  goto 40


state 9
	stmt : LBRACE . stmts RBRACE  (18)
	literal : LBRACE . RBRACE  (108)
	literal : LBRACE . exprs RBRACE  (109)
	literal : LBRACE . key_val_exprs RBRACE  (110)

	LPAREN  shift 8
	LBRACE  shift 9
	RBRACE  shift 48
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	FUN  shift 14
	TYPE  shift 15
	PRINT  shift 16
	RAISE  shift 17
	BREAK  shift 18
	RETURN  shift 19
	TRY  shift 20
	INLINE  shift 21
	IF  shift 22
	FOR  shift 23
	WHILE  shift 24
	MATCH  shift 25
	SEMI  shift 26
	UNDER  shift 27
	STRING  shift 49
	INT  shift 50
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	stmts  goto 51
	fxn  goto 35
	typ  goto 36
	exprs  goto 52
	stmt  goto 37
	expr  goto 53
	id  goto 39
	literal  goto 40
	key_val_exprs  goto 54


state 10
	expr : MINUS . expr  (50)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 55
	id  goto 39
	literal  goto 40


state 11
	expr : INCREMENT . expr  (48)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 56
	id  goto 39
	literal  goto 40


state 12
	expr : DECREMENT . expr  (47)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 57
	id  goto 39
	literal  goto 40


state 13
	expr : NEGATE . expr  (49)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 58
	id  goto 39
	literal  goto 40


state 14
	fxn : FUN . ID LPAREN ids RPAREN LBRACE stmts RBRACE  (5)
	fxn : FUN . ID LPAREN RPAREN LBRACE stmts RBRACE  (6)

	ID  shift 59
	.  error


state 15
	typ : TYPE . ID ASSIGN LBRACE stmts RBRACE sub_typs  (7)
	typ : TYPE . ID ASSIGN sub_typs  (8)

	ID  shift 60
	.  error


state 16
	stmt : PRINT . expr SEMI  (22)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 61
	id  goto 39
	literal  goto 40


state 17
	stmt : RAISE . expr SEMI  (24)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 62
	id  goto 39
	literal  goto 40


state 18
	stmt : BREAK . SEMI  (25)

	SEMI  shift 63
	.  error


state 19
	stmt : RETURN . expr SEMI  (23)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 64
	id  goto 39
	literal  goto 40


state 20
	stmt : TRY . LBRACE stmts RBRACE CATCH expr LBRACE stmts RBRACE  (30)
	expr : TRY . expr COLON expr  (51)

	LPAREN  shift 8
	LBRACE  shift 65
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 66
	id  goto 39
	literal  goto 40


state 21
	stmt : INLINE . LBRACK cpp_strings RBRACK  (21)

	LBRACK  shift 67
	.  error


state 22
	stmt : IF . LPAREN expr RPAREN LBRACE stmts RBRACE  (31)
	stmt : IF . LPAREN expr RPAREN LBRACE stmts RBRACE else_stmt  (32)

	LPAREN  shift 68
	.  error


state 23
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE  (27)
	stmt : FOR . LPAREN expr IN expr RPAREN LBRACE stmts RBRACE  (28)

	LPAREN  shift 69
	.  error


state 24
	stmt : WHILE . LPAREN expr RPAREN LBRACE stmts RBRACE  (26)

	LPAREN  shift 70
	.  error


state 25
	stmt : MATCH . LPAREN expr RPAREN LBRACE match_conditions RBRACE  (29)

	LPAREN  shift 71
	.  error


state 26
	stmt : SEMI .  (33)

	.  reduce 33


state 27
	id : UNDER .  (93)

	.  reduce 93


state 28
	literal : STRING .  (107)

	.  reduce 107


state 29
	literal : INT .  (103)

	.  reduce 103


state 30
	literal : DOUBLE .  (104)

	.  reduce 104


state 31
	literal : CHAR .  (105)

	.  reduce 105


state 32
	literal : BOOL .  (106)

	.  reduce 106


state 33
	id : ID .  (90)
	id : ID . QUEST  (91)
	id : ID . FORCE  (92)

	QUEST  shift 72
	FORCE  shift 73
	LPAREN  reduce 90
	RPAREN  reduce 90
	LBRACE  reduce 90
	RBRACE  reduce 90
	LBRACK  reduce 90
	RBRACK  reduce 90
	PLUS  reduce 90
	MINUS  reduce 90
	TIMES  reduce 90
	DIVIDE  reduce 90
	MOD  reduce 90
	INCREMENT  reduce 90
	DECREMENT  reduce 90
	LT  reduce 90
	GT  reduce 90
	LEQ  reduce 90
	GEQ  reduce 90
	EQ  reduce 90
	NEQ  reduce 90
	AND  reduce 90
	OR  reduce 90
	NEGATE  reduce 90
	IS  reduce 90
	ASSIGN  reduce 90
	PLUSASSIGN  reduce 90
	MINUSASSIGN  reduce 90
	TIMESASSIGN  reduce 90
	DIVIDEASSIGN  reduce 90
	MODASSIGN  reduce 90
	FORCEASSIGN  reduce 90
	FUN  reduce 90
	TYPE  reduce 90
	PRINT  reduce 90
	RAISE  reduce 90
	BREAK  reduce 90
	RETURN  reduce 90
	TRY  reduce 90
	INLINE  reduce 90
	IF  reduce 90
	FOR  reduce 90
	WHILE  reduce 90
	IN  reduce 90
	MATCH  reduce 90
	WHEN  reduce 90
	SEMI  reduce 90
	COLON  reduce 90
	COMMA  reduce 90
	PERIOD  reduce 90
	VERT  reduce 90
	UNDER  reduce 90
	EOF  reduce 90
	STRING  reduce 90
	INT  reduce 90
	DOUBLE  reduce 90
	CHAR  reduce 90
	BOOL  reduce 90
	ID  reduce 90


state 34
	program : imports stmts . EOF  (1)

	EOF  shift 74
	.  error


state 35
	stmt : fxn .  (20)

	.  reduce 20


state 36
	stmt : typ .  (19)

	.  reduce 19


state 37
	stmts : stmt . stmts  (16)
	stmts : .  (15)

	LPAREN  shift 8
	LBRACE  shift 9
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	FUN  shift 14
	TYPE  shift 15
	PRINT  shift 16
	RAISE  shift 17
	BREAK  shift 18
	RETURN  shift 19
	TRY  shift 20
	INLINE  shift 21
	IF  shift 22
	FOR  shift 23
	WHILE  shift 24
	MATCH  shift 25
	SEMI  shift 26
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	RBRACE  reduce 15
	EOF  reduce 15

	stmts  goto 75
	fxn  goto 35
	typ  goto 36
	stmt  goto 37
	expr  goto 38
	id  goto 39
	literal  goto 40


state 38
	stmt : expr . SEMI  (17)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . MOD expr  (56)
	expr : expr . AND expr  (57)
	expr : expr . OR expr  (58)
	expr : expr . LT expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . LEQ expr  (61)
	expr : expr . GEQ expr  (62)
	expr : expr . EQ expr  (63)
	expr : expr . NEQ expr  (64)
	expr : expr . IS expr  (65)
	expr : expr . QUEST expr COLON expr  (66)
	expr : expr . ASSIGN expr  (67)
	expr : expr . PLUSASSIGN expr  (68)
	expr : expr . MINUSASSIGN expr  (69)
	expr : expr . TIMESASSIGN expr  (70)
	expr : expr . DIVIDEASSIGN expr  (71)
	expr : expr . MODASSIGN expr  (72)
	expr : expr . FORCEASSIGN expr  (73)
	expr : expr . brack_exprs  (83)
	expr : expr . paren_tuple_exprs  (84)
	expr : expr . period_access_exprs  (85)
	expr : expr . LPAREN RPAREN  (86)
	expr : expr . LPAREN exprs RPAREN  (87)
	expr : expr . INCREMENT  (88)
	expr : expr . DECREMENT  (89)

	LPAREN  shift 76
	LBRACK  shift 77
	PLUS  shift 78
	MINUS  shift 79
	TIMES  shift 80
	DIVIDE  shift 81
	MOD  shift 82
	INCREMENT  shift 83
	DECREMENT  shift 84
	LT  shift 85
	GT  shift 86
	LEQ  shift 87
	GEQ  shift 88
	EQ  shift 89
	NEQ  shift 90
	AND  shift 91
	OR  shift 92
	QUEST  shift 93
	IS  shift 94
	ASSIGN  shift 95
	PLUSASSIGN  shift 96
	MINUSASSIGN  shift 97
	TIMESASSIGN  shift 98
	DIVIDEASSIGN  shift 99
	MODASSIGN  shift 100
	FORCEASSIGN  shift 101
	SEMI  shift 102
	PERIOD  shift 103
	.  error

	brack_exprs  goto 104
	paren_tuple_exprs  goto 105
	period_access_exprs  goto 106


state 39
	expr : id .  (81)

	.  reduce 81


state 40
	expr : literal .  (82)

	.  reduce 82


state 41
	imports : import imports .  (3)

	.  reduce 3


state 42
	literal : LBRACE . RBRACE  (108)
	literal : LBRACE . exprs RBRACE  (109)
	literal : LBRACE . key_val_exprs RBRACE  (110)

	LPAREN  shift 8
	LBRACE  shift 42
	RBRACE  shift 48
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 49
	INT  shift 50
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	exprs  goto 52
	expr  goto 46
	id  goto 39
	literal  goto 40
	key_val_exprs  goto 54


state 43
	expr : TRY . expr COLON expr  (51)

	LPAREN  shift 8
	LBRACE  shift 42
	MINUS  shift 10
	INCREMENT  shift 11
	DECREMENT  shift 12
	NEGATE  shift 13
	TRY  shift 43
	UNDER  shift 27
	STRING  shift 28
	INT  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BOOL  shift 32
	ID  shift 33
	.  error

	expr  goto 66
	id  goto 39
	literal  goto 40


state 44
	id : LPAREN ids . RPAREN  (94)

	RPAREN  shift 107
	.  error


state 45
	expr : LPAREN exprs . RPAREN ASSIGN LPAREN exprs RPAREN  (74)
	expr : LPAREN exprs . RPAREN PLUSASSIGN LPAREN exprs RPAREN  (75)
	expr : LPAREN exprs . RPAREN MINUSASSIGN LPAREN exprs RPAREN  (76)
	expr : LPAREN exprs . RPAREN TIMESASSIGN LPAREN exprs RPAREN  (77)
	expr : LPAREN exprs . RPAREN DIVIDEASSIGN LPAREN exprs RPAREN  (78)
	expr : LPAREN exprs . RPAREN MODASSIGN LPAREN exprs RPAREN  (79)
	expr : LPAREN exprs . RPAREN FORCEASSIGN LPAREN exprs RPAREN  (80)
	literal : LPAREN exprs . RPAREN  (111)

	RPAREN  shift 108
	.  error


state 46
	exprs : expr .  (45)
	exprs : expr . COMMA exprs  (46)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . MOD expr  (56)
	expr : expr . AND expr  (57)
	expr : expr . OR expr  (58)
	expr : expr . LT expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . LEQ expr  (61)
	expr : expr . GEQ expr  (62)
	expr : expr . EQ expr  (63)
	expr : expr . NEQ expr  (64)
	expr : expr . IS expr  (65)
	expr : expr . QUEST expr COLON expr  (66)
	expr : expr . ASSIGN expr  (67)
	expr : expr . PLUSASSIGN expr  (68)
	expr : expr . MINUSASSIGN expr  (69)
	expr : expr . TIMESASSIGN expr  (70)
	expr : expr . DIVIDEASSIGN expr  (71)
	expr : expr . MODASSIGN expr  (72)
	expr : expr . FORCEASSIGN expr  (73)
	expr : expr . brack_exprs  (83)
	expr : expr . paren_tuple_exprs  (84)
	expr : expr . period_access_exprs  (85)
	expr : expr . LPAREN RPAREN  (86)
	expr : expr . LPAREN exprs RPAREN  (87)
	expr : expr . INCREMENT  (88)
	expr : expr . DECREMENT  (89)

	LPAREN  shift 76
	LBRACK  shift 77
	PLUS  shift 78
	MINUS  shift 79
	TIMES  shift 80
	DIVIDE  shift 81
	MOD  shift 82
	INCREMENT  shift 83
	DECREMENT  shift 84
	LT  shift 85
	GT  shift 86
	LEQ  shift 87
	GEQ  shift 88
	EQ  shift 89
	NEQ  shift 90
	AND  shift 91
	OR  shift 92
	QUEST  shift 93
	IS  shift 94
	ASSIGN  shift 95
	PLUSASSIGN  shift 96
	MINUSASSIGN  shift 97
	TIMESASSIGN  shift 98
	DIVIDEASSIGN  shift 99
	MODASSIGN  shift 100
	FORCEASSIGN  shift 101
	COMMA  shift 109
	PERIOD  shift 103
	RPAREN  reduce 45
	LBRACE  reduce 45
	RBRACE  reduce 45
	NEGATE  reduce 45
	FUN  reduce 45
	TYPE  reduce 45
	PRINT  reduce 45
	RAISE  reduce 45
	BREAK  reduce 45
	RETURN  reduce 45
	TRY  reduce 45
	INLINE  reduce 45
	IF  reduce 45
	FOR  reduce 45
	WHILE  reduce 45
	MATCH  reduce 45
	SEMI  reduce 45
	VERT  reduce 45
	UNDER  reduce 45
	EOF  reduce 45
	STRING  reduce 45
	INT  reduce 45
	DOUBLE  reduce 45
	CHAR  reduce 45
	BOOL  reduce 45
	ID  reduce 45

	brack_exprs  goto 104
	paren_tuple_exprs  goto 105
	period_access_exprs  goto 106


state 47
	expr : id .  (81)
	ids : id . COMMA id  (95)
	ids : id . COMMA ids  (96)

	COMMA  shift 110
	LPAREN  reduce 81
	RPAREN  reduce 81
	LBRACK  reduce 81
	PLUS  reduce 81
	MINUS  reduce 81
	TIMES  reduce 81
	DIVIDE  reduce 81
	MOD  reduce 81
	INCREMENT  reduce 81
	DECREMENT  reduce 81
	LT  reduce 81
	GT  reduce 81
	LEQ  reduce 81
	GEQ  reduce 81
	EQ  reduce 81
	NEQ  reduce 81
	AND  reduce 81
	OR  reduce 81
	QUEST  reduce 81
	IS  reduce 81
	ASSIGN  reduce 81
	PLUSASSIGN  reduce 81
	MINUSASSIGN  reduce 81
	TIMESASSIGN  reduce 81
	DIVIDEASSIGN  reduce 81
	MODASSIGN  reduce 81
	FORCEASSIGN  reduce 81
	PERIOD  reduce 81


state 48
	literal : LBRACE RBRACE .  (108)

	.  reduce 108


state 49
	literal : STRING .  (107)
	key_val_exprs : STRING . COLON expr  (113)
	key_val_exprs : STRING . COLON expr COMMA key_val_exprs  (115)

	COLON  shift 111
	LPAREN  reduce 107
	RBRACE  reduce 107
	LBRACK  reduce 107
	PLUS  reduce 107
	MINUS  reduce 107
	TIMES  reduce 107
	DIVIDE  reduce 107
	MOD  reduce 107
	INCREMENT  reduce 107
	DECREMENT  reduce 107
	LT  reduce 107
	GT  reduce 107
	LEQ  reduce 107
	GEQ  reduce 107
	EQ  reduce 107
	NEQ  reduce 107
	AND  reduce 107
	OR  reduce 107
	QUEST  reduce 107
	IS  reduce 107
	ASSIGN  reduce 107
	PLUSASSIGN  reduce 107
	MINUSASSIGN  reduce 107
	TIMESASSIGN  reduce 107
	DIVIDEASSIGN  reduce 107
	MODASSIGN  reduce 107
	FORCEASSIGN  reduce 107
	SEMI  reduce 107
	COMMA  reduce 107
	PERIOD  reduce 107


state 50
	literal : INT .  (103)
	key_val_exprs : INT . COLON expr  (112)
	key_val_exprs : INT . COLON expr COMMA key_val_exprs  (114)

	COLON  shift 112
	LPAREN  reduce 103
	RBRACE  reduce 103
	LBRACK  reduce 103
	PLUS  reduce 103
	MINUS  reduce 103
	TIMES  reduce 103
	DIVIDE  reduce 103
	MOD  reduce 103
	INCREMENT  reduce 103
	DECREMENT  reduce 103
	LT  reduce 103
	GT  reduce 103
	LEQ  reduce 103
	GEQ  reduce 103
	EQ  reduce 103
	NEQ  reduce 103
	AND  reduce 103
	OR  reduce 103
	QUEST  reduce 103
	IS  reduce 103
	ASSIGN  reduce 103
	PLUSASSIGN  reduce 103
	MINUSASSIGN  reduce 103
	TIMESASSIGN  reduce 103
	DIVIDEASSIGN  reduce 103
	MODASSIGN  reduce 103
	FORCEASSIGN  reduce 103
	SEMI  reduce 103
	COMMA  reduce 103
	PERIOD  reduce 103


state 51
	stmt : LBRACE stmts . RBRACE  (18)

	RBRACE  shift 113
	.  error


state 52
	literal : LBRACE exprs . RBRACE  (109)

	RBRACE  shift 114
	.  error


state 53
	stmt : expr . SEMI  (17)
	exprs : expr .  (45)
	exprs : expr . COMMA exprs  (46)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . MOD expr  (56)
	expr : expr . AND expr  (57)
	expr : expr . OR expr  (58)
	expr : expr . LT expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . LEQ expr  (61)
	expr : expr . GEQ expr  (62)
	expr : expr . EQ expr  (63)
	expr : expr . NEQ expr  (64)
	expr : expr . IS expr  (65)
	expr : expr . QUEST expr COLON expr  (66)
	expr : expr . ASSIGN expr  (67)
	expr : expr . PLUSASSIGN expr  (68)
	expr : expr . MINUSASSIGN expr  (69)
	expr : expr . TIMESASSIGN expr  (70)
	expr : expr . DIVIDEASSIGN expr  (71)
	expr : expr . MODASSIGN expr  (72)
	expr : expr . FORCEASSIGN expr  (73)
	expr : expr . brack_exprs  (83)
	expr : expr . paren_tuple_exprs  (84)
	expr : expr . period_access_exprs  (85)
	expr : expr . LPAREN RPAREN  (86)
	expr : expr . LPAREN exprs RPAREN  (87)
	expr : expr . INCREMENT  (88)
	expr : expr . DECREMENT  (89)

	LPAREN  shift 76
	LBRACK  shift 77
	PLUS  shift 78
	MINUS  shift 79
	TIMES  shift 80
	DIVIDE  shift 81
	MOD  shift 82
	INCREMENT  shift 83
	DECREMENT  shift 84
	LT  shift 85
	GT  shift 86
	LEQ  shift 87
	GEQ  shift 88
	EQ  shift 89
	NEQ  shift 90
	AND  shift 91
	OR  shift 92
	QUEST  shift 93
	IS  shift 94
	ASSIGN  shift 95
	PLUSASSIGN  shift 96
	MINUSASSIGN  shift 97
	TIMESASSIGN  shift 98
	DIVIDEASSIGN  shift 99
	MODASSIGN  shift 100
	FORCEASSIGN  shift 101
	SEMI  shift 102
	COMMA  shift 109
	PERIOD  shift 103
	RBRACE  reduce 45

	brack_exprs  goto 104
	paren_tuple_exprs  goto 105
	period_access_exprs  goto 106


state 54
	literal : LBRACE key_val_exprs . RBRACE  (110)

	RBRACE  shift 115
	.  error

